--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,17 +10,14 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".PayeActivity"
-            android:label="@string/title_activity_paye_calculator"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
